--- a/src/js/components/homepageUpdate/hero/HeroPoc.scss
+++ b/src/js/components/homepageUpdate/hero/HeroPoc.scss
@@ -25,7 +25,7 @@
     justify-content: center;
     @media (max-width: 992px) {
         display: block;
-        width: 513px;
+        width: 640px;
     }
     @media (max-width: 468px) {
         display: block;
